# howto

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  config.rs  install.rs  main.rs  prompt.rs  safety.rs  ui.rs
src/llm/: mod.rs  ollama.rs  openai.rs
tests/: cli_integration.rs
