[package]
name = "howto"
version = "0.1.0"
edition = "2021"
description = "Convert natural language to shell commands"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
ureq = { version = "2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
anyhow = "1"
crossterm = "0.28"

[profile.release]
strip = true
lto = true

[dev-dependencies]
tempfile = "3"
